# voxel-engine

./: Cargo.toml  settings.toml
voxel-engine/: Cargo.toml
voxel-engine/src/: controls.rs  game_state.rs  lib.rs  main.rs  settings.rs
voxel-engine/src/game_state/: coords.rs  entity.rs  mod.rs
voxel-engine/src/renderer/: buffer.rs  camera.rs  mod.rs  model.rs  texture.rs
voxel-engine/src/renderer/shaders/: main_shader.wgsl
voxel-maths/: Cargo.toml
voxel-maths/src/: fixed_point.rs  i48_int.rs  lib.rs
voxel-runtime/: Cargo.toml
voxel-runtime/src/: fs.rs  lib.rs  rt.rs  sync.rs  time.rs
