[package]
name = "voxel-engine"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
voxel-runtime = { version = "*", path = "../voxel-runtime" }
log = { version = "0.4.27", features = ["max_level_debug", "release_max_level_warn"] }
tracing = { version = "0.1.41", features = ["log-always", "max_level_debug", "release_max_level_warn"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing-subscriber = "0.3.19"
glam = { version = "0.30.3", features = ["bytemuck"] }
bytemuck = "1.23.0"
wgpu = "25.0.0"
winit = "0.30.10"
pollster = "0.4.0"
toml = "0.8.22"
image = "0.25.6"
anyhow = "1.0.98"
arc-swap = "1.7.1"
ahash = "0.8.11"
thiserror = "2.0.12"